fixes scrollbar issue for chart container when not needed

--- a/apps/recent-activity/src/app/components/chart/chart.component.scss
+++ b/apps/recent-activity/src/app/components/chart/chart.component.scss
@@ -12,7 +12,10 @@
 }
 
 .chart-container-wrapper {
-  overflow-y: auto;
+  overflow-x: auto;
+  @media (min-width: 750px) {
+    overflow: hidden;
+  }
 }
 
 .title {
